--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -89,6 +89,11 @@
             background-color: #f8f9fa;
             font-weight: bold;
         }
+        .info-text {
+            font-size: 10px;
+            color: #666;
+            font-style: italic;
+        }
         .sequence-inputs {
             margin: 15px 0;
             padding: 10px;
@@ -152,10 +157,10 @@
             <table id="dft-table">
                 <thead>
                     <tr>
-                        <th>k</th>
-                        <th>Real Part</th>
-                        <th>Imaginary Part</th>
-                        <th>DFT(k)</th>
+                        <th>k<br><span class="info-text">frequency bin</span></th>
+                        <th>Real Part<br><span class="info-text">cosine component</span></th>
+                        <th>Imaginary Part<br><span class="info-text">sine component</span></th>
+                        <th>DFT(k)<br><span class="info-text">frequency content</span></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -183,10 +188,10 @@
             <table id="fft-table">
                 <thead>
                     <tr>
-                        <th>k</th>
-                        <th>Real Part</th>
-                        <th>Imaginary Part</th>
-                        <th>FFT(k)</th>
+                        <th>k<br><span class="info-text">frequency bin</span></th>
+                        <th>Real Part<br><span class="info-text">cosine component</span></th>
+                        <th>Imaginary Part<br><span class="info-text">sine component</span></th>
+                        <th>FFT(k)<br><span class="info-text">frequency content</span></th>
                     </tr>
                 </thead>
                 <tbody>
